--- a/1.md
+++ b/1.md
@@ -1,21 +1,20 @@
 ```
-           <meta name="description" content="Мы изучили более 60 исследований. Мы выяснили шесть основных составляющих «работы
-мечты». Доход не входит в их число, и они не сводятся к простому «занимайся тем, что любишь" />
-           <link rel="canonical" href="https://80000hours.org/career-guide/job-satisfaction/" />
-           <meta property="og:locale" content="en_US" />
+           <meta name="description" content="Мы изучили более 60 исследований и обнаружили, что работа мечты — не высокооплачиваемая или простая, и не нуждается в ваших мечтах. Скореее, нужно сосредоточиться на 6 ключевых элементах" />
+           <link rel="canonical" href="https://80000hours.ru/career-guide/job-satisfaction/" />
+           <meta property="og:locale" content="ru_RU" />
            <meta property="og:type" content="article" />
-           <meta property="og:title" content="Мы изучили более 60 исследований, посвященных источникам удовлетворения в карьере. И вот что выяснили." />
-           <meta property="og:description" content="Мы изучили более 60 исследований, выяснили шесть основных составляющих «работы мечты». И ни одна не сводятся к простому «занимайся тем, что любишь»." />
-           <meta property="og:url" content="https://80000hours.org/career-guide/job-satisfaction/" />
-           <meta property="og:site_name" content="80,000 Hours" />
+           <meta property="og:title" content="Мы изучили 60 исследований, посвященных составляющим «работы мечты». Вот что мы обнаружили." />
+           <meta property="og:description" content="Мы изучили все научные статьи, опирающиеся на более 60 исследований, и нашли шесть основных факторов настоящей удовлетворённости работой. Ни один из них — не «следуй за мечтой»." />
+           <meta property="og:url" content="https://80000hours.ru/career-guide/job-satisfaction/" />
+           <meta property="og:site_name" content="80,000 Часов" />
            <meta property="article:publisher" content="https://www.facebook.com/80000Hours" />
            <meta property="og:image" content="https://cdn.80000hours.org/wp-content/uploads/2016/04/icecream-taster-v16-e1465228392655.png" />
            <meta property="og:image:secure_url" content="https://cdn.80000hours.org/wp-content/uploads/2016/04/icecream-taster-v16-e1465228392655.png" />
            <meta property="og:image:width" content="1199" />
            <meta property="og:image:height" content="629" />
            <meta name="twitter:card" content="summary_large_image" />
-           <meta name="twitter:description" content="Мы изучили более 60 исследований, выяснили шесть основных составляющих «работы мечты». И ни одна не сводятся к простому «занимайся тем, что любишь»." />
-           <meta name="twitter:title" content="Мы изучили более 60 исследований, посвященных источникам удовлетворения в карьере. И вот что выяснили." />
+           <meta name="twitter:description" content="Мы изучили все научные статьи, опирающиеся на более 60 исследований, и нашли шесть основных факторов настоящей удовлетворённости работой. Ни один из них — не «следуй за мечтой»." />
+           <meta name="twitter:title" content="Мы изучили более 60 исследований, посвященных составляющим «работы мечты». Вот что мы обнаружили." />
            <meta name="twitter:site" content="@80000hours" />
            <meta name="twitter:image" content="https://cdn.80000hours.org/wp-content/uploads/2016/04/icecream-taster-v16-e1465228392655.png" />
            <meta name="twitter:creator" content="@80000hours" />
@@ -23,25 +22,25 @@
 
 Часть 1:
 
-Что такое «работа мечты»?
+Что такое «работа мечты»? Вот что говорят факты.
 
-# Мы изучили более 60 исследований, посвященных источникам удовлетворения в карьере. И вот что выяснили.
+# Мы изучили более 60 исследований, посвященных составляющим «работы мечты». Вот что мы обнаружили.
 
 By <span class="byline author vcard"><a href="https://80000hours.org/author/benjamin-todd/" rel="author" class="fn">Benjamin Todd</a></span> &middot; Last updated <time class="update" datetime="2017-04-07T00:00:00+00:00">April 2017</time>
 
 ![](https://cdn.80000hours.ru/cartoon_1.jpg)
 
-Все мы хотим найти работу своей мечты; хотим, чтобы она была значимой и в то же время приносила удовольствие. Но что стоит за этими словами?
+Все мы хотим найти работу мечты, которая приносит удовольствие и значима, но какой смысл стоит за этими словами?
 
-Одни верят, что найдут ответ, следуя своим увлечениям; другие же считают, что главное в работе мечты — чтобы она была нетяжелой и высокооплачиваемой.
+Одни верят, что ответ включает обнаружение своих *увлечений* благодаря какому-то озарению; другие думают, что главное в работе мечты — чтобы она была нетяжелой и высокооплачиваемой.
 
-Мы изучили более 60 исследований, проведенных за два последних десятилетия и посвященных источникам удовлетворения в жизни и карьере, но так и не обнаружили достаточного подтверждения ни той, ни другой теории. 
+Мы изучили более 60 исследований, проведенных за два последних десятилетия и посвященных источникам удовлетворения в жизни и в работе, но не нашли подтверждений этих взглядов. 
 
 Зато мы выяснили шесть основных составляющих «работы мечты». Доход не входит в их число, и они не сводятся к простому «занимайся тем, что любишь».
 
-На самом деле, следуя за страстью, можно попросту сбиться с пути. Перед тем как увлечься цифровыми технологиями, Стив Джобс был страстным приверженцем дзен-буддизма. Кондолиза Райс с упоением занималась музыкой, пока не начала изучать политику. 
+На самом деле, следуя за увлечениями, можно попросту сбиться с пути. Перед тем как увлечься цифровыми технологиями, Стив Джобс был увлечён дзен-буддизмом. Кондолиза Райс была талантливой исполнительницей классической музыки, пока не начала изучать политику. 
 
-Вполне вероятно, что в итоге вы страстно увлечетесь той работой, которая будет для вас много значить и приносить удовольствие. Секрет в том, чтобы добиться успеха в деле, полезном для других.
+Скорее, вы можете развить увлечение той работой, которая будет приносить удовольствие и казаться вам значимой. Секрет в том, чтобы добиться успеха в том, что помогает другим людям.
 
  *Watch this video or read the full article (15 minutes). If you just want the raw research, see <a href="/articles/job-satisfaction-research/">the evidence review</a>.*
 
@@ -59,7 +58,7 @@ By <span class="byline author vcard"><a href="https://80000hours.org/author/benj
                    </div>
 ```
 
-## Что мы делаем не так
+## Что идёт не так
 
 Обычно, пытаясь выбрать работу своей мечты, люди перебирают в воображении несколько профессий и размышляют, будут ли они приносить им удовлетворение. Или же вспоминают, в каких случаях они чувствовали себя полностью реализованными, и решают, что для них является самым важным. 
 
