--- a/5.md
+++ b/5.md
@@ -38,20 +38,21 @@
 
 Пытаясь ответить на данный вопрос, нам пришлось подвергнуть сомнению всё, о чём мы думали, что знаем, а затем делать это снова и снова.
 
-Here, we give a summary of what we’ve learned.[^:`<p>"Us" refers to the 80,000 Hours team. The primary author of the article is Benjamin Todd, the CEO of 80,000 Hours. He first met Will MacAskill, with whom he founded 80,000 Hours, in 2009 through Giving What We Can. In 2009, he also met other initiators of the Centre for Effective Altruism, such as Toby Ord. It was at this point he started to actively think about this question, which is why we say "8 years", even though 80,000 Hours was only founded in 2011. Will and Toby had been thinking about these issues for longer.`] Read on to hear why ending diarrhoea might save as many lives as world peace, why artificial intelligence might be even more important, and what to do in your own career to make the most urgent changes happen.
 
-In short, the most urgent problems are those where people can have the greatest impact by working on them. As we explained in the <a href="/career-guide/most-pressing-problems/">previous article</a>, this means problems that are not only big, but also *neglected and solvable*. The more neglected and solvable, the further extra effort will go. And this means they’re not the problems that first come to mind.
+Здесь приведен конспект того, что мы узнали.[^:`<p>"Мы" означает команду проекта 80,000 часов. Первый автор данного данной статьи Бенджамин Тодд, исполнительный директор 80,000 часов. В 2009 году Бенджамин впервые встретил Уилла МакАскила через программу "Отдавая то, что можно", и вместе они организовали 80,000 часов. Тогда же в 2009 году Бенджамин встретил основателей Центра эффективного альтруизма, например Тоби Орда. Именно тогда Бен стал активно задумываться о вопросе выбора карьеры для получения максимального эффекта. Поэтому мы гооврим о 8 годах исследований, хотя проект 80,000 часов появился только в 2011 году. Уилл и Тоби задавались этим вопросом ещё раньше.`] Прочтите, чтобы узнать, почему прекращение диареи может спасти столько же жизней, сколько прекращение войны во всём мире, почему искусственный интеллект может быть даже важнее всего этого, и что делать со своей карьерой, чтобы решить самые неотложные проблемы мира.
 
-*Reading time: 30 minutes. If you just want to see our current views on the world&#8217;s most urgent problems, <a href="/problem-profiles/">skip ahead</a>.*
+Если кратко, самые насущные задачи - это те, решая которые, люди окажут наибольшее влияние на будущее. Как мы объясняли в  <a href="/career-guide/most-pressing-problems/">предыдущей статье</a>, это означает что решаемые задачи являются не только большими, но также *пренебрегаемыми и решаемыми*. Чем более они пренебрегаемы и решаемы, тем больше окажется вклад человека, который возьмётся их решать. Получается, что это совсем не те проблемы, которые первыми приходят на ум.
 
-## Why issues facing rich countries aren’t always the most important—and why charity shouldn’t always begin at home.
+*Время чтения: 30 минут. Если вы просто хотите увидеть наш текущий список самы насущных мировых задач, <a href="/problem-profiles/">то можно сразу перейти к нужной статье</a>.*
 
-Most people who want to do good focus on issues in their home country. In rich countries, this often means issues like homelessness, inner city education and unemployment. But are these the most urgent issues?
+## Почему проблемы богатых стран зачастую не самые важные-и почему благотворительность не всегда должна начинаться дома
 
-In the US, only 4% of charitable donations are spent on international causes.[^:`<blockquote><p>
- Americans Donated an Estimated $358.38 Billion to Charity in 2014
+Большинство людей, которые хотят творить добро, фокусируются на проблемах своей страны. В богатых странах это означает решение проблем бездомных, безработицы, стремления дать образование  бедным слоям населения. Но это ли самые срочные задачи?
+
+В США, только 4% взносов на благотворительность тратся на международные нужды.[^:`<blockquote><p>
+Американцы отдали на благотворительность около $358.38 миллиардов долларов в 2014
 </p></blockquote>
-<p><a href="http://web.archive.org/web/20170228032122/https://givingusa.org/giving-usa-2015-press-release-giving-usa-americans-donated-an-estimated-358-38-billion-to-charity-in-2014-highest-total-in-reports-60-year-history/">Archived link</a>, retrieved 27-Febuary-2017`] The most popular careers for talented graduates who want to do good are teaching and health, which receive about 18% of graduates, and mainly involve helping people in the US.[^:`<p>According to the Harvard Crimson, after graduating 4% of graduates go into education, health and non-profits, while 3% go into government or politics. “Non-profits” includes lots of problem areas, including education and health, so when broken down into problem areas, education and health probably come out top. Also note that a large fraction of government spending goes into education and health, so those who go into government are also contributing to these areas.</p>
+<p><a href="http://web.archive.org/web/20170228032122/https://givingusa.org/giving-usa-2015-press-release-giving-usa-americans-donated-an-estimated-358-38-billion-to-charity-in-2014-highest-total-in-reports-60-year-history/">архивированная ссылка</a>, retrieved 27-Febuary-2017`] Наиболее популярными карьерами для талантливых выпускников, которые хотят творить добро, являются сферы обучения и здравоохранения, в которые приходят примерно 18% выпускников, при этом в основном помощь получают граждане США.[^:`<p>According to the Harvard Crimson, after graduating 4% of graduates go into education, health and non-profits, while 3% go into government or politics. “Non-profits” includes lots of problem areas, including education and health, so when broken down into problem areas, education and health probably come out top. Also note that a large fraction of government spending goes into education and health, so those who go into government are also contributing to these areas.</p>
 <p>Only 15% of graduates go into some form of public service. So of <em>these</em>, i.e. of those going into a form of public service, over 27% go into each of education and health.</p>
 <p>In 10 years, 3% plan to be in education and 15% plan to be in health, making the total 18% (assuming these intentions are realised).</p>
 <p><a href="https://web.archive.org/web/20170227191412/http://features.thecrimson.com/2016/senior-survey/post-harvard/">Archived link</a>, retrieved 27-Febuary-2017.</p>
