--- a/1.md
+++ b/1.md
@@ -42,7 +42,7 @@
 
 Скорее, вы можете развить увлечение той работой, которая будет приносить удовольствие и казаться вам значимой. Секрет в том, чтобы добиться успеха в том, что помогает другим людям.
 
- *Посмотрите видео или прочитайте статью полностью (15 минут). Если интересует только исследование, то по ссылке <a href="/articles/job-satisfaction-research/"></a>.*
+ *Посмотрите видео или прочитайте статью полностью (15 минут). Если интересуют только научные работы, читайте <a href="/articles/job-satisfaction-research/">обзор исследований</a>.*
 
 !ytb-iY5Vd4LH1J4
 
