--- a/6.md
+++ b/6.md
@@ -59,15 +59,15 @@
 
 ## Путь 1: Получать, чтобы отдавать
 
-Принес бы Билл Гейтс больше пользы, если бы работал на маленькую некоммерческую фирму? Мы редко думаем о разработке программного обеспечения как о пути принесения пользы миру, но Гейтс спас миллионы детских жизней, спонсируя разработку вакцин. Даже если вы не в восторге от Microsoft, вы согласитесь, что это неоценимое благо.
+Принес бы Билл Гейтс больше пользы, если бы работал на маленькую некоммерческую фирму? Мы редко думаем о разработке программного обеспечения как о пути принесения пользы миру, но Гейтс спас миллионы детских жизней, спонсируя разработку вакцин. Даже если Вы не в восторге от Microsoft, Вы согласитесь, что это неоценимое благо.
 
 ![Билл Гейтс внес огромный вклад своей благотворительностью, и это, на наш взгляд, с избытком компенсирует "синий экран смерти".](//80000hours.org/wp-content/uploads/2015/07/bill-gates-fireflies.jpg)[`Билл Гейтс внес огромный вклад своей благотворительностью, спася детей в количестве большем, чем население Шотландии, и это, на наш взгляд, с избытком компенсирует "синий экран смерти".`]
 
-We often meet people who are interested in a higher earning job, like software engineering, but are worried they won’t make a difference. Part of the reason is that we don’t usually think of earning more money as a path for people who want to do good. However, there are many effective organisations that have no problem finding enthusiastic staff, but don’t have the funds to hire. People who are a good fit for a higher earning option can donate to these organisations, and make a large contribution indirectly.
+Мы часто встречаем людей, заинтересованных в высокооплачиваемой работе, такой как разработка ПО, которые переживают, что не сделают ничего значимого для мира. Отчасти потому что мы не привыкли думать о зарабатывании денег, как о способе приносить пользу. В то же время, существует множество благотворительных организаций, у которых нет проблем с поиском заинтересованных сотрудников, однако, нет и денег на их найм. Люди, способные зарабатывать большие деньги, могли бы спонсировать подобные организации, и таким образом приносить миру большую пользу.
 
-Earning to give is not just for people who want to work in high paying industries. Anyone who aims to earn more in order to give more is on this path.
+Путь "получать, чтобы отдавать" - не только для людей, желающих работать в высокооплачиваемых сферах. Любой, кто хочет больше зарабатывать ради того, чтобы больше отдавать, уже на этом пути.
 
-Consider the story of Julia and Jeff, a couple from Boston with two children. Julia switched from non-profit admin work to social work at a prison. Jeff used to work as research technician. He decided to train up to become a software engineer, and eventually got a job at Google. The couple were able to earn more than twice as much, so started to donate about half their income to charity each year.
+Возьмем для примера историю Джулии и Джефа, бостонской пары с двумя детьми. Джулия перешла с должности администратора в некоммерческой организации на социальную работу в тюрьме. Джефф ранее работал as research technician. He decided to train up to become a software engineer, and eventually got a job at Google. The couple were able to earn more than twice as much, so started to donate about half their income to charity each year.
 
 ![Jeff and Julia have tried to find the best way to make a difference](https://cdn.80000hours.org/wp-content/uploads/2014/10/Jeff-and-Julia-make-a-difference.png)[`<a href="http://qz.com/515655/this-couple-lives-on-6-of-their-income-so-they-can-give-100000-a-year-to-charity/" target="_blank">Quartz:</a> Jeff and Julia have tried to find the best way to make a difference`]
 
