--- a/1.md
+++ b/1.md
@@ -98,9 +98,9 @@
 
 ### Деньги делают нас счастливее, но ненамного 
 
-Избитая истина гласит о том, что счастье не купишь, однако финансовая безопасность <a href="https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf" target="_blank">лидирует в списке карьерных приоритетов большинства людей</a>[^:` Net Impact, What Workers Want in 2012 <br> See Figure 1.1 <br> <a href="https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf">https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf</a>`]. Более того, самый распространенный ответ на вопрос «что могло бы больше всего улучшить качество вашей жизни?» — это деньги. [^:`<blockquote>When individuals are asked what would most improve the quality of their lives, the most common response is a higher income</blockquote> Judge, Timothy A., et al. "The relationship between pay and job satisfaction: A meta-analysis of the literature." Journal of Vocational Behavior 77.2 (2010): 157-167. <br> <a href="http://www.panglossinc.com/documents/Therelationshipbetweenpayandjobsatisfaction.pdf">http://www.panglossinc.com/documents/Therelationshipbetweenpayandjobsatisfaction.pdf</a>`] В чем же подвох? Кто прав, кто виноват?
+Избитая истина гласит о том, что счастье не купишь, однако финансовая безопасность <a href="https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf" target="_blank">лидирует в списке карьерных приоритетов большинства людей</a>[^:`Net Impact, What Workers Want in 2012 <br> See Figure 1.1 <br> <a href="https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf">https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf</a>`]. Более того, самый распространенный ответ на вопрос «что могло бы больше всего улучшить качество вашей жизни?» — это деньги. [^:`<blockquote>When individuals are asked what would most improve the quality of their lives, the most common response is a higher income</blockquote> Judge, Timothy A., et al. "The relationship between pay and job satisfaction: A meta-analysis of the literature." Journal of Vocational Behavior 77.2 (2010): 157-167. <br> <a href="http://www.panglossinc.com/documents/Therelationshipbetweenpayandjobsatisfaction.pdf">http://www.panglossinc.com/documents/Therelationshipbetweenpayandjobsatisfaction.pdf</a>`] В чем же подвох? Кто прав, кто виноват?
 
-Качество исследований на эту тему по большей части крайне низкое. Тем не менее несколько недавних крупных работ по экономике кое-что проясняют. Мы <a href="/articles/money-and-happiness/"> проанализировали лучшие из доступных исследований и обнаружили, что
+Качество исследований на эту тему по большей части крайне низкое. Тем не менее несколько недавних крупных работ по экономике кое-что проясняют. Мы <a href="/articles/money-and-happiness/">проанализировали лучшие из доступных исследований</a> и обнаружили, что
 истина где-то посередине: деньги действительно делают нас счастливее, но ненамного. 
            
 Вот что выяснилось в результате масштабного опроса, проведенного в США в 2010 году:
@@ -292,10 +292,9 @@ Retrieved 12 Feb 2016</p>
 . медсестра и акушерка;
 . нейрохирург.
 
-Ключевое различие в том, что работы из второго списка, похоже, приносят пользу другим людям. Эти профессии кажутся значимыми, и поэтому помощь другим — наш второй фактор.
+Ключевое различие в том, что работы из второго списка, похоже, *приносят пользу другим людям*. Вот почему они значимы, и почему помощь другим — наш второй фактор.
 
-Все больше <a href="/articles/job-satisfaction-research/#2-work-that-helps-others"> фактов </a>  говорит о том, что помогать другим —
-это прямой путь к удовлетворенности жизнью. Люди, которые занимаются волонтерством, более здоровы и менее склонны к депрессии. Согласно выборочному исследованию, случайные проявления доброты делают счастливее того, кто дает. А судя по международному опросу, люди, которые жертвуют средства на благотворительность, так же удовлетворены своей жизнью, как те, кто зарабатывает в два раза больше.
+Становится <a href="/articles/job-satisfaction-research/#2-work-that-helps-others"> *всё больше свидетельств* </a>, что что помогать другим — ключевой элемент удовлетворенности жизнью. Люди, которые занимаются волонтерством, более здоровы и менее склонны к депрессии. Рандомизированное исследование показало, что случайные проявления доброты делают счастливее, случайные проявления человеком доброты делают *его* счастливее. Международный опрос показал, что люди, жертвующие на благотворительность, так же довольны своей жизнью, как те, кто зарабатывает в два раза больше.
 
 Помогать другим — не единственный способ построить значимую карьеру, но среди специалистов бытует мнение, что этот — один из наиболее эффективных.
 
@@ -387,8 +386,7 @@ Retrieved 12 Feb 2016</p>
 
 ![Steve Jobs - advocate of ‘follow your passion’ - was passionate about western history and dance when he was young](//eighty-thousand-hours-wp-production.s3.amazonaws.com/2014/08/apple_pink_logo_with_words.png)[`Steve Jobs – advocate of ‘follow your passion’ – was passionate about Zen Buddhism, western history and dance when he was young.`]
 
-Мало у кого есть всего одно увлечение. Наши интересы часто
-меняются — чаще, <a href="https://80000hours.org/2015/02/we-change-more-than-we-expect-so-keep-your-options-open/" target="_blank">чем мы того ожидаем</a>. ] Вспомните, чем вы больше всего интересовались пять лет назад, — вероятно, вы обнаружите, что ваши сегодняшние интересы отличаются кардинально. И, как мы уже выяснили, мы плохо понимаем, что нас на самом деле делает счастливыми.
+Мало у кого есть всего одно увлечение. Наши интересы часто меняются — чаще, <a href="https://80000hours.org/2015/02/we-change-more-than-we-expect-so-keep-your-options-open/" target="_blank">чем мы того ожидаем</a>. Вспомните, чем вы больше всего интересовались пять лет назад, — вероятно, вы обнаружите, что ваши сегодняшние интересы отличаются кардинально. И, как мы уже выяснили, мы плохо понимаем, что нас на самом деле делает счастливыми.
 
 Все это говорит о том, что у вас есть намного больше возможностей для построения успешной карьеры, чем могло показаться вначале.
 
@@ -428,7 +426,7 @@ Retrieved 12 Feb 2016</p>
 
 Если помощь другим станет вашей целью, люди захотят помогать вам в достижении успеха
 
-Этот тезис кажется очевидным, но теперь он подтвержден на практике. В превосходной книге <a href="http://www.adamgrant.net/#!giveandtake/c1aev" target="_blank"> «Брать и отдавать»</a>,  профессор Адам Грант утверждает, что люди, настроенные помогать другим, достигают самой вершины успеха. Во-первых, они получают больше поддержки, во-вторых, они видят смысл в том, что делают, и это мотивирует их еще сильнее.
+Этот тезис кажется очевидным, но теперь он подтвержден на практике. В превосходной книге <a href="http://www.adamgrant.net/#!giveandtake/c1aev" target="_blank"> *«Брать и отдавать»*</a>,  профессор Адам Грант утверждает, что люди, настроенные помогать другим, достигают самой вершины успеха. Во-первых, они получают больше поддержки, во-вторых, они видят смысл в том, что делают, и это мотивирует их еще сильнее.
 
 Стоит заметить, что дающие могут оказаться и среди неудачников, если слишком концентрируются на других, быстро выгорая. Поэтому о других составляющих идеальной работы тоже забывать не стоит.
 
