--- a/1.md
+++ b/1.md
@@ -82,7 +82,7 @@
 
 Мы часто представляем себе, что работа мечты должна быть высокооплачиваемой и нетяжелой. .
 
-В одном из ведущих в США рейтингов профессий, предоставленном сайтом Careercast, профессии ранжируются по следующим критериям:[^`CareerCast’s 2015 methodology is described <a href="http://www.careercast.com/jobs-rated/2015-jobs-rated-methodology">here</a>. <br> <a href="https://web.archive.org/web/20160302120256/http://www.careercast.com/jobs-rated/2015-jobs-rated-methodology">Archived link</a>, retrieved 2-March-2016`]
+В одном из ведущих в США рейтингов профессий, предоставленном сайтом Careercast, профессии ранжируются по следующим критериям:[^:`CareerCast’s 2015 methodology is described <a href="http://www.careercast.com/jobs-rated/2015-jobs-rated-methodology">here</a>. <br> <a href="https://web.archive.org/web/20160302120256/http://www.careercast.com/jobs-rated/2015-jobs-rated-methodology">Archived link</a>, retrieved 2-March-2016`]
 
 1. высоко ли оплачивается работа?
 1. будет ли она высокооплачиваемой в будущем?
